Imported Upstream version 0.19

--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Changes for AnyEvent::Filesys::Notify
 
+0.19 - Mon Jan 14 20:30:38 EST 2013
+    Fixes KQueue bugs.  This works on a Mac, hoping it will work on FreeBSD.
+
+0.18 - Thu Jan 10 10:39:22 EST 2013
+    Fixes non-mac bug where 'plan' is called twice
+    Thanks to syohex for the patch.
+
+0.17 - Wed Jan  9 19:53:53 EST 2013
+    - Renames backend roles to reflect the implementation rather than the O/S
+      (Inotify2, FSEvents and KQueue)
+    - Adds the 'backend' argument to the constructor allow the user to force
+      a particular backend
+    - Guides the user to avoid no_external in the docs
+
 0.15 - Wed Dec  5 12:01:07 EST 2012
     Skips attribute modification tests on Win32.
 
